css fixes
remove wrong scrollbars in navbar header
fix spacing of name in view profile

--- a/scss/dialogs/_group-styles.scss
+++ b/scss/dialogs/_group-styles.scss
@@ -16,6 +16,7 @@ p.group-name {
   p.trucated-name {
     text-overflow: ellipsis;
     overflow: hidden;
+    margin-bottom: 0;
   }
 }
 
