--- a/scss/main_screen/_navbar_wrapper.scss
+++ b/scss/main_screen/_navbar_wrapper.scss
@@ -14,6 +14,7 @@
     text-overflow: ellipsis;
     font-size: 18px;
     font-weight: bold;
+    overflow: hidden;
   }
 
   .bp4-align-left {
